@@ -59,6 +59,18 @@ lib/SPVM/Net/SSLeay/OBJ.c
 lib/SPVM/Net/SSLeay/OBJ.config
 lib/SPVM/Net/SSLeay/OBJ.pm
 lib/SPVM/Net/SSLeay/OBJ.spvm
+lib/SPVM/Net/SSLeay/OCSP.c
+lib/SPVM/Net/SSLeay/OCSP.config
+lib/SPVM/Net/SSLeay/OCSP.pm
+lib/SPVM/Net/SSLeay/OCSP.spvm
+lib/SPVM/Net/SSLeay/OCSP_REQUEST.c
+lib/SPVM/Net/SSLeay/OCSP_REQUEST.config
+lib/SPVM/Net/SSLeay/OCSP_REQUEST.pm
+lib/SPVM/Net/SSLeay/OCSP_REQUEST.spvm
+lib/SPVM/Net/SSLeay/OCSP_RESPONSE.c
+lib/SPVM/Net/SSLeay/OCSP_RESPONSE.config
+lib/SPVM/Net/SSLeay/OCSP_RESPONSE.pm
+lib/SPVM/Net/SSLeay/OCSP_RESPONSE.spvm
 lib/SPVM/Net/SSLeay/OPENSSL.c
 lib/SPVM/Net/SSLeay/OPENSSL.config
 lib/SPVM/Net/SSLeay/OPENSSL.pm
